[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/UI/Quiz/framemath.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Piratekeg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/scroller_slider.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/scroller_slider_light.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/grabber_slider.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/OptionsUI.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Quiz/answerbox.png" type="Texture" id=7]
[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 84
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )
region_rect = Rect2( 0, 0, 600, 50 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 600, 50 )

[sub_resource type="DynamicFont" id=5]
size = 108
font_data = ExtResource( 8 )

[node name="OptionsCanvas" type="CanvasLayer"]
pause_mode = 2
layer = 2

[node name="Options" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1110.0
margin_top = -519.0
margin_right = 1110.0
margin_bottom = 519.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_top = 43.0
margin_right = 230.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 400.0
margin_top = -240.0
margin_right = 817.0
margin_bottom = -138.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_right = 1350.0
margin_bottom = 98.0
custom_constants/separation = 300

[node name="Label" type="Label" parent="Options/VBoxContainer/Sound"]
margin_right = 450.0
margin_bottom = 98.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Sounds"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options/VBoxContainer/Sound"]
margin_left = 750.0
margin_right = 1350.0
margin_bottom = 98.0
alignment = 1

[node name="SoundScroller" type="HSlider" parent="Options/VBoxContainer/Sound/VBoxContainer"]
margin_top = 33.0
margin_right = 600.0
margin_bottom = 65.0
rect_min_size = Vector2( 600, 25 )
custom_icons/tick = ExtResource( 5 )
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -12.0
max_value = 12.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 198.0
margin_right = 1350.0
margin_bottom = 296.0
custom_constants/separation = 300

[node name="Label" type="Label" parent="Options/VBoxContainer/Music"]
margin_right = 450.0
margin_bottom = 98.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = SubResource( 2 )
text = "Music"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options/VBoxContainer/Music"]
margin_left = 750.0
margin_right = 1350.0
margin_bottom = 98.0
alignment = 1

[node name="MusicScroller" type="HSlider" parent="Options/VBoxContainer/Music/VBoxContainer"]
margin_top = 33.0
margin_right = 600.0
margin_bottom = 65.0
rect_min_size = Vector2( 600, 25 )
custom_icons/tick = ExtResource( 5 )
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -12.0
max_value = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="Options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -229.0
margin_top = -222.0
margin_right = 229.0
margin_bottom = -99.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Options/VBoxContainer/Sound/VBoxContainer/SoundScroller" to="Options" method="_on_SoundScroller_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/Music/VBoxContainer/MusicScroller" to="Options" method="_on_MusicScroller_value_changed"]
[connection signal="pressed" from="Options/Close" to="Options" method="_on_Close_pressed"]
